# graphql-rust

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
