[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
async-graphql = "^3"
async-trait = "0.1"
serde_json = "^1"
serde_derive = "^1"
